2010-02-01  Alan McGovern  <amcgovern@novell.com>

	* MarkupExpressionParser.cs: We shouldn't call
	  NativeMethods.value_free_value2 if value_ptr is null. This
	  can happen if we look up a static resource which doesn't
	  exist.

2010-01-29  Alan McGovern  <amcgovern@novell.com>

	* MarkupExpressionParser.cs: Parse the UpdateSourceTrigger
	  property properly for Bindings.

2010-01-28  Alan McGovern  <amcgovern@novell.com>

	* MoonlightTypeConverter.cs: Throw an exception with the
	  correct message

2010-01-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Types.cs: Remove debug spew.

2010-01-27  Chris Toshok  <toshok@ximian.com>

	* NativeMethods.cs (CreateManagedException): handle
	ListenFailedException.

	* Events.cs: add
	CreateMessageReceivedEventArgsEventHandlerDispatcher and
	CreateSendCompletedEventArgsEventHandlerDispatcher.

2010-01-27  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* NativeDependencyObjectHelper.cs: GetValue: Uncomment thread check
	that was accidentally committed.

2010-01-26  Jackson Harper  <jackson@ximian.com>

	* ManagedXamlLoader.cs: If we have unrooted relative URIs expand
	them, this is because URIs are relative to their base.

2010-01-26  Alan McGovern  <amcgovern@novell.com>

	* Types.cs: TypeToKind should register the type if it hasn't
	  already been registered. Fixes some TypeConversion issues in
	  http://burkovsky.gmxhome.de/agfractal where we were looking
	  up the native kind of 'int16' before it was registered.

2010-01-22  Alan McGovern  <amcgovern@novell.com>

	* DoubleKeyedDictionary.cs: Fix up the interactions between
	  the various ItemsChanged events and OnItemsChanged methods.
	  I think we're now clearing containers and refreshing the ICG
	  in the correct place aswell.

2010-01-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* MoonlightTypeConverter.cs: Give more information in exception message.

2010-01-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Kind.cs: Regenerated.
